# cht

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  GRAPH_MAPPING.md  INSTALL.md  NULLABLE_DATETIME_ENHANCEMENT.md  PROJECT_STRUCTURE.md  README.md  SINGLE_FILE_DISTRIBUTION.md  cht.code-workspace  demo_unified_api.py  demo_v0.4.2_release.py  docker-compose.yml  example_complete_workflow.py  example_temp_tables.py  pyproject.toml  release_notes_v0.4.3.txt  release_notes_v0.4.4.txt  requirements-dev.txt  requirements.txt  setup.cfg  test_basic_interface.py  test_browser_console.py  test_docker_integration.py  test_from_query.py  test_install.py  test_simplified_api.py  test_to_df_limit.py
.github/workflows/: build-wheel.yml  build-wheels.yml  test.yml  tests.yml
docker/init/: 001-create-database.sql
docs/: colab_lazy_cluster.md  metadata_api_design.md  metadata_api_usage.md  testing.md
examples/: README.md  advanced_operations.py  basic_usage.py  dependency_graph_basic.py  dependency_graph_mock.py
scripts/: build-all.sh  build-sfx.py  build-zipapp.py  run_tests.py  setup-dev.sh
src/cht/: __init__.py  cluster.py  colab.py  dataframe.py  graph.py  kafka.py  operations.py  sql_utils.py  table.py  temp_tables.py  web.py
src/cht/api/: __init__.py  app.py  cluster_store.py  dependencies.py  frontend.py  main.py  schemas.py  services.py
src/cht/api/routers/: clusters.py  metadata.py
tests/: conftest.py  test_cluster.py  test_clusters_api.py  test_dataframe.py  test_frontend_integration.py  test_graph.py  test_kafka.py  test_metadata_api.py  test_metadata_api_docker.py  test_nullable_datetime.py  test_operations.py  test_sql_utils.py  test_table.py  test_table_constructor.py  test_table_default_cluster.py  test_temp_tables.py  test_web_api_docker.py  test_web_interface.py
