[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cht"
version = "0.4.7"
description = "Modular ClickHouse operations utilities for backup, maintenance, and Kafka tooling."
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Isaac Kalinkin", email = "i.kalinkin@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "clickhouse-connect>=0.6.8",
    "pandas>=1.5",
    "fastapi>=0.110",
    "uvicorn>=0.30",
]

[project.scripts]
cht-web = "cht.web:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "pylint>=4.0",
]
test = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "selenium>=4.0; extra == 'ui'",
    "requests>=2.28",
]
ui-test = [
    "selenium>=4.0",
]

[project.urls]
Homepage = "https://github.com/kalinkinisaac/cht"
Repository = "https://github.com/kalinkinisaac/cht"
Issues = "https://github.com/kalinkinisaac/cht/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
