[metadata]
name = cht
version = 0.1.0
description = Modular ClickHouse operations utilities for backup, maintenance, and Kafka tooling.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/cht
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    clickhouse-connect>=0.6.8
    pandas>=1.5
python_requires = >=3.10

[options.extras_require]
dev =
    pytest>=7.4
    pytest-mock>=3.12

[options.packages.find]
where = src
